--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,1 +1,16 @@
-spring.application.name=Musica
+# 1. La URL de conexión (cambia 'musica_db' por el nombre real de tu base de datos)
+spring.datasource.url=jdbc:mysql://localhost:3307/musica_db?useSSL=false&serverTimezone=UTC
+
+# 2. Tus credenciales de MySQL
+spring.datasource.username=root
+spring.datasource.password=
+
+# 3. Configuración de JPA (Para que Spring gestione las tablas)
+# 'update': crea/actualiza tablas automáticamente según tus entidades Java
+spring.jpa.hibernate.ddl-auto=update
+
+# 'show-sql': Muestra en la consola las consultas que hace Spring (útil para aprender)
+spring.jpa.show-sql=true
+
+# Especificar el dialecto (Opcional en versiones nuevas, pero recomendado para evitar errores)
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
